test/compilable/test2401.d
module test2401;

import imports.test2401a;
import imports.test2401b;

void foo()
{
    Foo bar = 42;
}
