test/fail_compilation/test1441b.d
module test1441b;

import imports.test1441b;

void foo()
{
    auto obj = new Foo.Bar;
}
